# doublezero-edge-connect

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  PROTOCOL.md  README.md  SECURITY.md  deny.toml  docker-entrypoint.sh
.claude/: roadbike-output-32.jsonl  roadbike-output-32.jsonl.prev  roadbike-prompt-32.md  roadbike-session-id
.github/: CODEOWNERS  actionlint.yaml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: actionlint.yml  changelog-reminder.yml  qa.connect.yml  release.docker.edge-connect.build.yml  release.docker.edge-connect.dispatch.yml  release.docker.edge-connect.poll.yml  release.docker.edge-connect.yml  release.install-script.yml  release.shred-proxy.yml  rust.yml  security-audit.yml  shell-tests.yml
docs/: README.md  input-sources.md  metrics.md  output-sinks.md  self-hosting.md  shred-forwarding.md
docs/superpowers/specs/: 2026-07-06-connect-script-unit-tests-design.md
examples/: bench_dedup_vs_sigverify.rs  pcap2frames.rs
scripts/: README.md  connect-devnet.sh  connect-testnet.sh  connect.sh  phoenix_capture.py
shred-proxy/: Cargo.toml  README.md
shred-proxy/packaging/: 60-shred-proxy.conf  install.sh  shred-proxy.env.example  shred-proxy.service  uninstall.sh
shred-proxy/src/: main.rs  net.rs  reconcile.rs
src/: lib.rs  main.rs  metrics.rs  model.rs
src/ingest/: arbiter.rs  book.rs  codec.rs  codec_common.rs  codec_mbo.rs  codec_midpoint.rs  feeds.rs  mod.rs  phoenix_feeder.rs  processor.rs  public_feeder.rs  receiver.rs  reconcile.rs  subscriber.rs  subscriptions.rs  ws_feeder.rs
src/shred/: dedup.rs  discovery.rs  fixture_tests.rs  leader.rs  mod.rs  parse.rs  verify.rs
src/sinks/: metrics.rs  mod.rs  ws.rs
tests/: codec_mbo_fixtures.rs  codec_phoenix_fixtures.rs  dedup.rs  e2e.rs  phoenix_arbitrage.rs  ws_input_arbitrage.rs
tests/common/: assertions.rs  bridge.rs  mod.rs  replay.rs  ws_client.rs  ws_input.rs
tests/fixtures/: PROVENANCE.md  shred_leaders.json
tests/qa/: README.md  connect_e2e.sh  ws_probe.py
tests/scripts/: _helpers.bash  preflight_ws_port.bats  reinstall_existing.bats  set_e_regression.bats
