[package]
name = "doublezero-edge-connect"
version = "0.1.0"
edition = "2021"
description = "DoubleZero Edge multicast feed -> normalized WebSocket bridge"
license = "Apache-2.0"

[[bin]]
name = "doublezero-edge-connect"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.29"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socket2 = { version = "0.6", features = ["all"] }
nix = { version = "0.31", features = ["time", "socket", "net", "uio"] }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
serial_test = "3"
# Used only by examples/pcap2frames.rs (dev tooling) — not compiled into the release binary.
pcap-file = "2"
