[package]
name = "doublezero-edge-connect"
version = "0.1.0"
edition = "2021"
description = "DoubleZero Edge multicast feed -> normalized WebSocket bridge"
license = "Apache-2.0"

[[bin]]
name = "doublezero-edge-connect"
path = "src/main.rs"

[dependencies]
# Only the features the bridge uses (was `["full"]`, which pulled in fs/signal/process/etc.).
tokio = { version = "1", features = [
    "rt-multi-thread",
    "net",
    "sync",
    "time",
    "macros",
    "io-util",
] }
# `rustls-tls-webpki-roots` adds the outbound `wss://` client TLS used by the public WS input feeder
# (webpki bundled roots → portable container build, no system OpenSSL). The WS output sink uses the
# same crate as a plaintext server and is unaffected.
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
# `rc` enables Serialize/Deserialize for `Arc<str>` — the wire `venue`/`symbol` are `Arc<str>` so a
# per-message clone is a refcount bump, not a fresh allocation (see `model.rs`).
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
socket2 = { version = "0.6", features = ["all"] }
nix = { version = "0.31", features = ["time", "socket", "net", "uio"] }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Shred forwarder sigverify (issue #25): ed25519 over the shred/merkle-root signature, SHA-256 for
# merkle-root recomputation, base58 for leader pubkeys, and a minimal JSON-RPC client (rustls, no
# OpenSSL) for the leader schedule. Deliberately the *light* path — no heavy solana-* crates.
ed25519-dalek = "2"
sha2 = "0.11"
bs58 = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# Prometheus metrics: an explicit `Registry` + text encoder, served by a hand-rolled minimal HTTP
# handler (no HTTP framework — see `sinks::metrics`). `default-features = false` drops the unused
# protobuf encoder; `process` adds the Linux process collector (CPU/RSS/fds) for free.
prometheus = { version = "0.14", default-features = false, features = ["process"] }

[dev-dependencies]
serial_test = "3"
# Used only by examples/pcap2frames.rs (dev tooling) — not compiled into the release binary.
pcap-file = "2"
